objects/ACR2__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookUpField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookUpField1</label>
        <referenceTo>ACR3__c</referenceTo>
        <relationshipLabel>ACR2s</relationshipLabel>
        <relationshipName>ACR2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LookUpField2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookUpField2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ACR2s</relationshipLabel>
        <relationshipName>ACR2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>Phone</type>
    </fields>
</CustomObject>